<resources>
    <string name="app_name">UberChicks</string>
    <string name="delivery_details_label">Delivery Details</string>
    <string name="selected_products">Selected Products</string>
    <string name="label_delivery_details">Delivery Details</string>
    <string name="label_change_location_details">Change Location Details</string>
    <string name="label_contact_number">Contact Number</string>
    <string name="label_summary">Summary</string>
    <string name="summary_total">Total</string>
    <string name="summary_contact_number">Contact number</string>
    <string name="btn_checkout_text">Checkout</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reg_email_hint">Email</string>
    <string name="reg_first_name_field">First Name</string>
    <string name="reg_last_name_field">Last Name</string>
    <string name="reg_password_field">Password</string>
    <string name="terms_and_conditions">I agree to the company’s Terms and Conditions</string>
    <string name="txt_sign_up_text">Sign Up</string>
    <string name="str_login_jambo">Jambo!</string>
    <string name="str_login_welcome_back">Welcome back</string>
    <string name="txt_sign_in">Sign In</string>
    <string name="nav_menu_logout_label">Logout</string>
    <string name="nav_menu_my_profile_label">My Profile</string>
    <string name="nav_menu_my_orders_label">My Orders</string>
</resources>