<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_menu_profile_name"
        android:title=""
        app:showAsAction="ifRoom" />
    <!--
        Make sure to add the title name to match the profile name
    -->
    <item
        android:id="@+id/nav_menu_my_orders"
        android:icon="@drawable/ic_baseline_arrow_forward"
        android:title="@string/nav_menu_my_orders_label"
        app:showAsAction="always" />
    <!--android:onClick="show_orders"-->

    <item
        android:id="@+id/nav_menu_my_profile"
        android:icon="@drawable/ic_baseline_arrow_forward"
        android:title="@string/nav_menu_my_profile_label"
        app:showAsAction="always" />
    <!--android:onClick="loadProfile"-->
    <item
        android:id="@+id/nav_menu_logout"
        android:title="@string/nav_menu_logout_label"
        app:showAsAction="ifRoom" />
    <!--android:onClick="logout"-->
</menu>