<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cart.CartFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cartItemsConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include
            android:id="@+id/tool_bar_cart"
            layout="@layout/toolbar_fragment"/>

        <TextView
            android:id="@+id/labelSelectedProduct"
            style="@style/TextAppearance.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/selected_products"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tool_bar_cart" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cartItemsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_anchor="@+id/cartItemsConstraintLayout"
            app:layout_anchorGravity="center"
            app:layout_constraintEnd_toEndOf="@+id/labelSelectedProduct"
            app:layout_constraintStart_toStartOf="@+id/labelSelectedProduct"
            app:layout_constraintTop_toBottomOf="@+id/labelSelectedProduct"
            tools:itemCount="3"
            tools:listitem="@layout/item_cart_item" />

        <TextView
            android:id="@+id/labelDeliveryLocation"
            style="@style/TextAppearance.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_delivery_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cartItemsRecyclerView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextDeliveryLocation"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/label_change_location_details"
            app:layout_constraintEnd_toEndOf="@+id/labelDeliveryLocation"
            app:layout_constraintStart_toStartOf="@+id/labelDeliveryLocation"
            app:layout_constraintTop_toBottomOf="@+id/labelDeliveryLocation">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDeliveryLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedContactNumber"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/label_contact_number"
            app:layout_constraintEnd_toEndOf="@+id/outlinedTextDeliveryLocation"
            app:layout_constraintStart_toStartOf="@+id/outlinedTextDeliveryLocation"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextDeliveryLocation">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editContactNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/labelSummary"
            style="@style/TextAppearance.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_summary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/outlinedContactNumber" />

        <TextView
            android:id="@+id/labelSummaryTotal"
            style="@style/TextAppearance.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="44dp"
            android:text="@string/summary_total"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelSummary" />

        <TextView
            android:id="@+id/labelSummaryLocation"
            style="@style/TextAppearance.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="Location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelSummaryTotal" />

        <TextView
            android:id="@+id/labelSummaryContactNumber"
            style="@style/TextAppearance.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/summary_contact_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelSummaryLocation" />

        <TextView
            android:id="@+id/textViewSummaryTotal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="16dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelSummary" />

        <TextView
            android:id="@+id/textViewSummaryLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSummaryTotal" />

        <TextView
            android:id="@+id/textViewSummaryContactNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSummaryLocation" />

        <Button
            android:id="@+id/btnCheckout"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/btn_checkout_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelSummaryContactNumber" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
